@@ -17,6 +17,7 @@ calendars <- c("TARGET",
                "UnitedStates/FederalReserve",
                "Argentina",
                "Australia",
+               "Australia/ASX",
                "Austria",
                "Austria/Exchange",
                "Bespoke",
